--- a/Test_spark.ipynb
+++ b/Test_spark.ipynb
@@ -18,7 +18,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EwTc4FoGwbPM",
-        "outputId": "2a1c81ff-b703-4cc8-d5ee-62bc02159f2b"
+        "outputId": "3fb970ff-3219-47f3-998a-04610b22092b"
       },
       "outputs": [
         {
@@ -28,14 +28,14 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting py4j==0.10.9.5\n",
             "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=5e12ebbb504408bae097e6b541078e8e37782a6a772460f55d1cf3e2e10cf369\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=112b8a8c41e68d81cac2f0d7ab9470985d959d5c557e969f190e92ff93dc1759\n",
             "  Stored in directory: /root/.cache/pip/wheels/43/dc/11/ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -44,17 +44,26 @@
         }
       ],
       "source": [
+        "#--detla table package\n",
+        "# !pip install -i https://test.pypi.org/simple/ delta-spark==2.1.0rc1\n",
+        "# !pip install importlib-metadata\n",
+        "# from delta import *\n",
+        "#-------------------\n",
         "!pip3 install pyspark\n",
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql import SparkSession\n",
-        "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, LongType\n",
+        "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, LongType,FloatType\n",
         "import math \n",
         "import pyspark.sql.functions as f\n",
         "from pyspark.sql import types \n",
         "from pyspark.sql import Window\n",
-        "spark = SparkSession.builder.master(\"local[*]\") \\\n",
+        "from pyspark.accumulators import AccumulatorParam\n",
+        "\n",
+        "spark = SparkSession.builder \\\n",
+        "                    .master(\"local[*]\") \\\n",
         "                    .appName('Test_spark') \\\n",
-        "                    .getOrCreate()"
+        "                    .getOrCreate()      \n",
+        "\n"
       ]
     },
     {
@@ -517,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -640,16 +649,33 @@
         "# inc ['ID', 'NAMES', 'COUNTRY', 'DATE', 'audit_time']\n",
         "# hist ['ID', 'NAMES', 'COUNTRY', 'DATE', 'audit_time']\n",
         "# ['ID', 'NAMES', 'COUNTRY', 'DATE', 'audit_time', 'audit_col']\n",
-        "\n",
+        "# USIN\n",
         "\n",
         "\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "USING BOUND CONCEPTS"
+      ],
+      "metadata": {
+        "id": "ClOfR1V3MfEA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "df=spark.read.format(\"csv\").option(\"header\",True).option(\"InferSchema\",True).load(\"/content/datapart/\").createOrReplaceTempView(\"temp\")\n",
-        "spark.sql(\"select * from temp order by DATE \").show()"
+        "df=spark.read.format('jdbc') \\\n",
+        "        .option(\"driver\",\"dirvername\") \\\n",
+        "        .option(\"partitioncolumn\",\"partittioncolumnname\") \\\n",
+        "        .option(\"upperbound\",\"int,date value\") \\\n",
+        "        .option(\"lowerbound\", \") \") \\\n",
+        "        .option(\"numofpartition\",\"no of connection\") \\\n",
+        "        .option(\"user\", \"<username>\") \\\n",
+        "        .option(\"password\", \"<password>\") \\\n",
+        "        .option(\"dbtable\", \"<your table>\") \\\n",
+        "        .load(path)"
       ],
       "metadata": {
         "colab": {
@@ -658,7 +684,7 @@
         "id": "3JZ75-x3H_U8",
         "outputId": "8e54fba0-c04e-4f76-ac24-8af0834860c1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,11 +722,229 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "CUSTOM_ACCUMULATOR"
+      ],
+      "metadata": {
+        "id": "grF0ongNZX47"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class String_acc(AccumulatorParam):\n",
+        "  def Zero(self,initialValue=\"\"):\n",
+        "    return \" \"\n",
+        "  def addIn  \n",
+        "\n",
+        " #parallize\n",
+        "# Dataframe -Tuple accepts\n",
+        "dataset=spark.sparkContext.parallelize([\"Alex,31\",\n",
+        "\"Anwar,1\",\n",
+        "\"Senthil,89\",\n",
+        "\"Azar,25\",\n",
+        "\"Elil,55\",\n",
+        "\"George,11\",\n",
+        "\"Mike,18\",\n",
+        "\"Mark,21\",\n",
+        "\"Taj,19\",\n",
+        "\"Thaha,16\",\n",
+        "\"Suresh,46\",\n",
+        "\"Hussey,72\",\n",
+        "\"gary,35\",\n",
+        "\"Clara,45\",\n",
+        "\"Thara,19\",\n",
+        "\"Radha,34\",\n",
+        "\"Badri,3\",\n",
+        "\"Thaha,14\"])\n",
+        "#m1=dataset.map(lambda x:(x.split(\",\")[0],x.split(\",\")[1]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KbFSxx_4ZXu2",
+        "outputId": "ae662d67-95fe-4d01-96a8-09b136a77a42"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('Alex', '31'), ('Anwar', '1'), ('Senthil', '89'), ('Azar', '25'), ('Elil', '55'), ('George', '11'), ('Mike', '18'), ('Mark', '21'), ('Taj', '19'), ('Thaha', '16'), ('Suresh', '46'), ('Hussey', '72'), ('gary', '35'), ('Clara', '45'), ('Thara', '19'), ('Radha', '34'), ('Badri', '3'), ('Thaha', '14')]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Map-partition in Dataframe "
+      ],
+      "metadata": {
+        "id": "G378LR4L_5xZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "data = [('James','Smith','M',3000.00),\n",
+        "  ('Anna','Rose','F',4100.00),\n",
+        "  ('Robert','Williams','M',6200.00), \n",
+        "  ('Robert','Williams','M',6200.00),\n",
+        "  ('Robert','Williams','M',6200.00),\n",
+        "  ('Robert','Williams','M',6200.00),\n",
+        "  ('Robert','Williams','M',6200.00)\n",
+        "]\n",
+        "\n",
+        "cls=StructType([ \\\n",
+        "    StructField(\"firstname\",StringType(),True), \\\n",
+        "    StructField(\"middlename\",StringType(),True), \\\n",
+        "    StructField(\"gender\", StringType(), True), \\\n",
+        "    StructField(\"salary\", FloatType(), True) \\\n",
+        "  ])\n",
+        "\n",
+        "cls1=StructType([ \n",
+        "    StructField(\"id\", IntegerType(), True), \\\n",
+        "    StructField(\"firstname\",StringType(),True), \\\n",
+        "    StructField(\"middlename\",StringType(),True), \\\n",
+        "    StructField(\"gender\", StringType(), True), \\\n",
+        "    StructField(\"salary\", FloatType(), True), \\\n",
+        "    \n",
+        "  ])\n",
+        "cls3=StructType([ StructField(\"id\", IntegerType(), True), \\\n",
+        "                  StructField(\"cnt\", IntegerType(), True) ])\n",
+        "\n",
+        "def reformat(partitionData):\n",
+        "    for row in partitionData:\n",
+        "        ab=row.salary*10/100\n",
+        "        yield(row.firstname,row.middlename,row.gender,ab)\n",
+        "\n",
+        "\n",
+        "def reformat1(id,partitionData):\n",
+        "    for row in partitionData:\n",
+        "        ab=row.salary*10/100\n",
+        "        yield(id+1,row.firstname,row.middlename,row.gender,ab)\n",
+        "\n",
+        "def reformat2(id,partitionData):\n",
+        "    cnt=0\n",
+        "    for row in partitionData:\n",
+        "        cnt=cnt+1\n",
+        "        yield(id+1,cnt)\n",
+        "    \n",
+        "\n",
+        "df = spark.createDataFrame(data=data, schema = cls)\n",
+        "\n",
+        "# df2=df.rdd.mapPartitions(reformat).toDF(cls)\n",
+        "# df2.show()\n",
+        "# df.show()\n",
+        "# dfm=df.rdd.mapPartitionsWithIndex(reformat1).toDF(cls1)\n",
+        "# dfm.show()\n",
+        "# dfm=df.rdd.mapPartitionsWithIndex(reformat2).toDF(cls3).orderBy(\"id\").groupBy(\"id\").agg(f.max(\"cnt\").alias(\"tcnt\"))\n",
+        "# dfm.show()\n",
+        "# dfz=df.rdd.zipWithIndex().toDF()\n",
+        "# dfz.show()\n",
+        "# dfz1=df.rdd.zipWithUniqueId().toDF()\n",
+        "# dfz1.show()\n",
+        "# print(df.rdd.zipWithIndex().collect())\n",
+        "\n",
+        "def reformat1(id,partitionData):\n",
+        "    for row in partitionData:\n",
+        "        yield(id+1,row)\n",
+        "\n",
+        "def fun(rwn):\n",
+        "\n",
+        "  partition_id   =rwn[0]\n",
+        "  id             =rwn[1][1]\n",
+        "  first          =rwn[1][0].firstname \n",
+        "  middle         =rwn[1][0].middlename \n",
+        "  return partition_id,id,first,middle\n",
+        "   \n",
+        "x=10\n",
+        "df7=df.rdd.zipWithUniqueId().mapPartitionsWithIndex(reformat1).map(lambda x : fun(x)).toDF([\"partition_id\",\"Id\",\"first\",\"second\"]).withColumn(\"Id\",f.col(\"Id\")+x)\n",
+        "df7.show()\n",
+        "#df7=df.rdd.zipWithUniqueId().mapPartitionsWithIndex(reformat1).toDF([\"partition_id\",\"Id\",\"first\",\"second\"]).withColumn(\"Id\",f.col(\"Id\")+x)\n",
+        "# df7.show()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gmjRxcZy_5me",
+        "outputId": "8665350f-cab2-416b-fdcd-59799f3f2343"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------+---+------+--------+\n",
+            "|partition_id| Id| first|  second|\n",
+            "+------------+---+------+--------+\n",
+            "|           1| 10| James|   Smith|\n",
+            "|           1| 12|  Anna|    Rose|\n",
+            "|           1| 14|Robert|Williams|\n",
+            "|           2| 11|Robert|Williams|\n",
+            "|           2| 13|Robert|Williams|\n",
+            "|           2| 15|Robert|Williams|\n",
+            "|           2| 17|Robert|Williams|\n",
+            "+------------+---+------+--------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "60drpsbe7Yzx"
       },
       "source": [
         "SQL_Test\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_even(test_list):\n",
+        "    for i in test_list:\n",
+        "        if i % 2 == 0:\n",
+        "            yield i\n",
+        " \n",
+        "# initializing list\n",
+        "test_list = [1, 4, 5, 6, 7]\n",
+        " \n",
+        "# printing initial list\n",
+        "print(\"The original list is : \" + str(test_list))\n",
+        " \n",
+        "# printing even numbers\n",
+        "print(\"The even numbers in list are : \", end=\" \")\n",
+        "for j in print_even(test_list):\n",
+        "    print(j)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bN0WfbD8hIZt",
+        "outputId": "a7ff617f-6958-4c4b-a2e2-e134b940d6f8"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The original list is : [1, 4, 5, 6, 7]\n",
+            "The even numbers in list are :  4\n",
+            "hello\n",
+            "6\n",
+            "hello\n"
+          ]
+        }
       ]
     },
     {
@@ -1210,7 +1454,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1LHZijXUq7sp3ubMGNQ9sx_NAnx5W4ziM",
-      "authorship_tag": "ABX9TyNCrjZV23mZjKDw+2xG8JD1",
+      "authorship_tag": "ABX9TyM7HbS6UH4rlL87G7fXdNKO",
       "include_colab_link": true
     },
     "kernelspec": {
